Rename all package references to expo-pencilkit-ui and update example app

--- a/.npmignore
+++ b/.npmignore
@@ -16,7 +16,8 @@ __rsc_tests__
 
 # Project specific
 /example/
-/expo-apple-pencilkit-example/
+/example/ios/
+/example/android/
 /node_modules/
 /src/
 *.log
