--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "expo-module-scripts": "^3.0.0"
+    "expo-module-scripts": "~1.2.0",
+    "babel-preset-expo": "~8.1.0"
   },
   "files": [
     "build",
