--- a/package.json
+++ b/package.json
@@ -42,10 +42,8 @@
   "jest": {
     "preset": "expo-module-scripts"
   },
-  "dependencies": {},
   "devDependencies": {
-    "expo-module-scripts": "~1.2.0",
-    "babel-preset-expo": "~8.1.0"
+    "expo-module-scripts": "^3.5.4"
   },
   "files": [
     "build",
