--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "preset": "expo-module-scripts"
   },
   "devDependencies": {
-    "expo-module-scripts": "^3.5.4"
+    "@types/react": "^19.1.6",
+    "@types/react-native": "^0.73.0",
+    "expo-module-scripts": "^3.5.4",
+    "expo-modules-core": "^2.4.0",
+    "react-native": "^0.79.3"
   },
   "files": [
     "build",
